bindings/go/slatedb.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
typedef void (*UniffiCallbackInterfaceFree)(uint64_t handle);
typedef void (*UniffiCallbackInterfaceMergeOperatorMethod0)(uint64_t uniffi_handle, RustBuffer key, RustBuffer existing_value, RustBuffer operand, RustBuffer* uniffi_out_return, RustCallStatus* callStatus );
typedef struct UniffiVTableCallbackInterfaceMergeOperator {
    UniffiCallbackInterfaceMergeOperatorMethod0 merge;
    UniffiCallbackInterfaceFree uniffiFree;
} UniffiVTableCallbackInterfaceMergeOperator;
void* uniffi_slatedb_ffi_fn_clone_writebatch(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_writebatch(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_writebatch_new(RustCallStatus *out_status
    
);
void uniffi_slatedb_ffi_fn_method_writebatch_close(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_writebatch_delete(void* ptr, RustBuffer key, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_writebatch_merge(void* ptr, RustBuffer key, RustBuffer operand, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_writebatch_merge_with_options(void* ptr, RustBuffer key, RustBuffer operand, RustBuffer options, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_writebatch_put(void* ptr, RustBuffer key, RustBuffer value, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_writebatch_put_with_options(void* ptr, RustBuffer key, RustBuffer value, RustBuffer options, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_init_callback_vtable_mergeoperator(UniffiVTableCallbackInterfaceMergeOperator* vtable
);
RustBuffer uniffi_slatedb_ffi_fn_func_default_settings_json(RustCallStatus *out_status
    
);
void uniffi_slatedb_ffi_fn_func_init_default_logging(RustCallStatus *out_status
    
);
void uniffi_slatedb_ffi_fn_func_init_logging(RustBuffer level, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_func_resolve_object_store(RustBuffer url, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_func_set_logging_level(RustBuffer level, RustCallStatus *out_status
);
RustBuffer ffi_slatedb_ffi_rustbuffer_alloc(uint64_t size, RustCallStatus *out_status
);
RustBuffer ffi_slatedb_ffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rustbuffer_free(RustBuffer buf, RustCallStatus *out_status
);
RustBuffer ffi_slatedb_ffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_slatedb_ffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_slatedb_ffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_slatedb_ffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_slatedb_ffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_slatedb_ffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_slatedb_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_slatedb_ffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_slatedb_ffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_f32(uint64_t handle
);
float ffi_slatedb_ffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_f64(uint64_t handle
);
double ffi_slatedb_ffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_pointer(uint64_t handle
);
void* ffi_slatedb_ffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_slatedb_ffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_void(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_void(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_complete_void(uint64_t handle, RustCallStatus *out_status
);
uint16_t uniffi_slatedb_ffi_checksum_func_default_settings_json(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_func_init_default_logging(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_func_init_logging(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_func_resolve_object_store(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_func_set_logging_level(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_begin(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_delete(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_delete_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_flush(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_flush_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_get_key_value(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_get_key_value_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_get_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_merge(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_merge_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_metrics(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_put(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_put_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_scan(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_scan_prefix(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_scan_prefix_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_scan_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_shutdown(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_snapshot(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_status(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_write(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_write_batch(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_write_batch_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_db_write_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbbuilder_build(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbbuilder_with_db_cache_disabled(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbbuilder_with_merge_operator(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbbuilder_with_seed(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbbuilder_with_settings_json(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbbuilder_with_sst_block_size(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbbuilder_with_wal_object_store(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbiterator_next(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbiterator_seek(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreader_close(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreader_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreader_get_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreader_scan(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreader_scan_prefix(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreader_scan_prefix_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreader_scan_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreaderbuilder_build(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreaderbuilder_with_checkpoint_id(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbreaderbuilder_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbsnapshot_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbsnapshot_get_key_value(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbsnapshot_get_key_value_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbsnapshot_get_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbsnapshot_scan(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbsnapshot_scan_prefix(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbsnapshot_scan_prefix_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbsnapshot_scan_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_commit(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_commit_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_delete(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_get_key_value(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_get_key_value_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_get_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_id(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_mark_read(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_merge(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_merge_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_put(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_put_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_dbtransaction_rollback(void
    
);