bindings/java/src/main/java/io/slatedb/UniffiLib.java

    Pointer uniffi_slatedb_ffi_fn_clone_writebatch(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_writebatch(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_constructor_writebatch_new(UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_writebatch_close(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_writebatch_delete(Pointer ptr, RustBuffer.ByValue key, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_writebatch_merge(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_writebatch_merge_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand, RustBuffer.ByValue options, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_writebatch_put(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_writebatch_put_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value, RustBuffer.ByValue options, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_init_callback_vtable_mergeoperator(UniffiVTableCallbackInterfaceMergeOperator vtable);
    RustBuffer.ByValue uniffi_slatedb_ffi_fn_func_default_settings_json(UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_func_init_default_logging(UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_func_init_logging(RustBuffer.ByValue level, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_func_resolve_object_store(RustBuffer.ByValue url, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_func_set_logging_level(RustBuffer.ByValue level, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_slatedb_ffi_rustbuffer_alloc(Long size, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_slatedb_ffi_rustbuffer_from_bytes(ForeignBytes.ByValue bytes, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rustbuffer_free(RustBuffer.ByValue buf, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue ffi_slatedb_ffi_rustbuffer_reserve(RustBuffer.ByValue buf, Long additional, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_u8(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_u8(Long handle);
    void ffi_slatedb_ffi_rust_future_free_u8(Long handle);
    Byte ffi_slatedb_ffi_rust_future_complete_u8(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_i8(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_i8(Long handle);
    void ffi_slatedb_ffi_rust_future_free_i8(Long handle);
    Byte ffi_slatedb_ffi_rust_future_complete_i8(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_u16(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_u16(Long handle);
    void ffi_slatedb_ffi_rust_future_free_u16(Long handle);
    Short ffi_slatedb_ffi_rust_future_complete_u16(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_i16(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_i16(Long handle);
    void ffi_slatedb_ffi_rust_future_free_i16(Long handle);
    Short ffi_slatedb_ffi_rust_future_complete_i16(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_u32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_u32(Long handle);
    void ffi_slatedb_ffi_rust_future_free_u32(Long handle);
    Integer ffi_slatedb_ffi_rust_future_complete_u32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_i32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_i32(Long handle);
    void ffi_slatedb_ffi_rust_future_free_i32(Long handle);
    Integer ffi_slatedb_ffi_rust_future_complete_i32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_u64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_u64(Long handle);
    void ffi_slatedb_ffi_rust_future_free_u64(Long handle);
    Long ffi_slatedb_ffi_rust_future_complete_u64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_i64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_i64(Long handle);
    void ffi_slatedb_ffi_rust_future_free_i64(Long handle);
    Long ffi_slatedb_ffi_rust_future_complete_i64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_f32(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_f32(Long handle);
    void ffi_slatedb_ffi_rust_future_free_f32(Long handle);
    Float ffi_slatedb_ffi_rust_future_complete_f32(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_f64(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_f64(Long handle);
    void ffi_slatedb_ffi_rust_future_free_f64(Long handle);
    Double ffi_slatedb_ffi_rust_future_complete_f64(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_pointer(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_pointer(Long handle);
    void ffi_slatedb_ffi_rust_future_free_pointer(Long handle);
    Pointer ffi_slatedb_ffi_rust_future_complete_pointer(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_rust_buffer(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_rust_buffer(Long handle);
    void ffi_slatedb_ffi_rust_future_free_rust_buffer(Long handle);
    RustBuffer.ByValue ffi_slatedb_ffi_rust_future_complete_rust_buffer(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    void ffi_slatedb_ffi_rust_future_poll_void(Long handle, UniffiRustFutureContinuationCallback callback, Long callbackData);
    void ffi_slatedb_ffi_rust_future_cancel_void(Long handle);
    void ffi_slatedb_ffi_rust_future_free_void(Long handle);
    void ffi_slatedb_ffi_rust_future_complete_void(Long handle, UniffiRustCallStatus uniffi_out_errmk);
    Short uniffi_slatedb_ffi_checksum_func_default_settings_json();
    Short uniffi_slatedb_ffi_checksum_func_init_default_logging();
    Short uniffi_slatedb_ffi_checksum_func_init_logging();
    Short uniffi_slatedb_ffi_checksum_func_resolve_object_store();
    Short uniffi_slatedb_ffi_checksum_func_set_logging_level();
    Short uniffi_slatedb_ffi_checksum_method_db_begin();
    Short uniffi_slatedb_ffi_checksum_method_db_delete();
    Short uniffi_slatedb_ffi_checksum_method_db_delete_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_flush();
    Short uniffi_slatedb_ffi_checksum_method_db_flush_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_get();
    Short uniffi_slatedb_ffi_checksum_method_db_get_key_value();
    Short uniffi_slatedb_ffi_checksum_method_db_get_key_value_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_get_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_merge();
    Short uniffi_slatedb_ffi_checksum_method_db_merge_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_metrics();
    Short uniffi_slatedb_ffi_checksum_method_db_put();
    Short uniffi_slatedb_ffi_checksum_method_db_put_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_scan();
    Short uniffi_slatedb_ffi_checksum_method_db_scan_prefix();
    Short uniffi_slatedb_ffi_checksum_method_db_scan_prefix_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_scan_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_shutdown();
    Short uniffi_slatedb_ffi_checksum_method_db_snapshot();
    Short uniffi_slatedb_ffi_checksum_method_db_status();
    Short uniffi_slatedb_ffi_checksum_method_db_write();
    Short uniffi_slatedb_ffi_checksum_method_db_write_batch();
    Short uniffi_slatedb_ffi_checksum_method_db_write_batch_with_options();
    Short uniffi_slatedb_ffi_checksum_method_db_write_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbbuilder_build();
    Short uniffi_slatedb_ffi_checksum_method_dbbuilder_with_db_cache_disabled();
    Short uniffi_slatedb_ffi_checksum_method_dbbuilder_with_merge_operator();
    Short uniffi_slatedb_ffi_checksum_method_dbbuilder_with_seed();
    Short uniffi_slatedb_ffi_checksum_method_dbbuilder_with_settings_json();
    Short uniffi_slatedb_ffi_checksum_method_dbbuilder_with_sst_block_size();
    Short uniffi_slatedb_ffi_checksum_method_dbbuilder_with_wal_object_store();
    Short uniffi_slatedb_ffi_checksum_method_dbiterator_next();
    Short uniffi_slatedb_ffi_checksum_method_dbiterator_seek();
    Short uniffi_slatedb_ffi_checksum_method_dbreader_close();
    Short uniffi_slatedb_ffi_checksum_method_dbreader_get();
    Short uniffi_slatedb_ffi_checksum_method_dbreader_get_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbreader_scan();
    Short uniffi_slatedb_ffi_checksum_method_dbreader_scan_prefix();
    Short uniffi_slatedb_ffi_checksum_method_dbreader_scan_prefix_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbreader_scan_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbreaderbuilder_build();
    Short uniffi_slatedb_ffi_checksum_method_dbreaderbuilder_with_checkpoint_id();
    Short uniffi_slatedb_ffi_checksum_method_dbreaderbuilder_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbsnapshot_get();
    Short uniffi_slatedb_ffi_checksum_method_dbsnapshot_get_key_value();
    Short uniffi_slatedb_ffi_checksum_method_dbsnapshot_get_key_value_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbsnapshot_get_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbsnapshot_scan();
    Short uniffi_slatedb_ffi_checksum_method_dbsnapshot_scan_prefix();
    Short uniffi_slatedb_ffi_checksum_method_dbsnapshot_scan_prefix_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbsnapshot_scan_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_commit();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_commit_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_delete();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_get();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_get_key_value();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_get_key_value_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_get_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_id();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_mark_read();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_merge();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_merge_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_put();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_put_with_options();
    Short uniffi_slatedb_ffi_checksum_method_dbtransaction_rollback();
